# New-Project

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  main.py  settings.py
app/ingestion/: __init__.py  reddit_provider.py  reddit_service.py
app/market/: __init__.py  market_provider.py  market_service.py
app/models/: __init__.py  market.py  reddit.py  report.py  signal.py
app/nlp/: __init__.py  lightweight.py  llm_classifier.py  preprocess.py
app/reporting/: __init__.py  csv_report.py  markdown_report.py
app/signals/: __init__.py  anomaly.py  lead_lag.py  pump_risk.py  synthesis.py
app/storage/: __init__.py  db.py  repositories.py  schema.py
app/tickers/: __init__.py  extractor.py  universe.py
app/utils/: __init__.py  dates.py  logging.py  text.py
config/: config.example.yaml  config.openai.test.yaml  config.test.yaml
data/: us_stock_universe.csv
tests/: test_cli.py  test_config.py  test_db.py  test_llm_classifier.py  test_reporting.py  test_repository.py
