[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-us-stocks-signal-pipeline"
version = "0.1.0"
description = "Daily Reddit-based US stock signal pipeline for human review"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.99.0",
  "pandas>=2.2.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "pyyaml>=6.0.1",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
